# yamble

./: .gitignore  Cargo.toml  LICENSE
migrations/2024-10-08-070041_storage/: down.sql  up.sql
migrations/2024-10-08-070534_playlist/: down.sql  up.sql
migrations/2024-11-11-013656_owned_sounds/: down.sql  up.sql
src/: audio.rs  discord.rs  main.rs  schema.rs
src/cmd/: join.rs  leave.rs  mod.rs  next.rs  pause.rs  play.rs  resume.rs  stop.rs  upload.rs
src/db/: mod.rs
