[package]
name = "yamble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
[dependencies.bigdecimal]
version = "0.4.8"
features = ["serde"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.tracing]
version = "0.1"
[dependencies.tracing-log]
version = "0.2"
default-features = false
features = []
[dependencies.tracing-subscriber]
version = "0.3"
features = ["tracing-log"]

[dependencies.config]
version = "0.14"
features = ["toml"]
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.songbird]
version = "0.5"
default-features = true
features = ["receive"]
[dependencies.symphonia]
version = "0.5"
features = ["all"]

[dependencies.serenity]
version = "0.12"
default-features = false
features = [
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
    "utils",

    "rustls_backend",

    "unstable_discord_api",
    "collector",

    "voice",
]
[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]
[dependencies.diesel]
version = "2"
features = ["postgres", "numeric", "chrono"]
[dependencies.diesel-async]
version = "0.7"
features = ["postgres"]

[dependencies.azel]
path = "../azel"
version = "0"

[dependencies.reqwest]
version = "0.12.12"
[dependencies.youtube_dl]
version = "0.10.0"
features = ["downloader-rustls-tls"]
